# micro-tensor

./: README.md  benchmarking.py  pyproject.toml  reproduce_results.py  requirements.txt  test_conv.py  test_graph.py  test_moons.py  test_tensor.py
.github/workflows/: tests.yml
examples/: benchmark.py  gpt_inference.py  mnist_loader.py  test_attention.py  test_conv.py  test_embedding.py  test_full_cnn.py  test_gpt.py  test_gpt_train.py  test_gradcheck.py  test_positional.py  test_transformer.py  train_mnist.py
micro_tensor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
microtensor/: engine.py  gradcheck.py  nn.py  nn_tensor.py  ops_fast.py  optim.py  optim_tensor.py  profiler.py  tensor.py
tests/: test_engine.py  test_tensor_engine.py
