[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "micro-tensor"
version = "0.1.0"
authors = [
  { name="Nibir", email="your-email@example.com" },
]
description = "A from-scratch, vectorized autograd engine for deep learning."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "matplotlib",
    "scikit-learn",
]
